--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,26 @@
 Package: PP
 Type: Package
 Title: Person Parameter estimation
-Version: 0.2-1
-Date: 2012-06-22
-Author: Manuel Reif
+Version: 0.5
+Date: 2014-08-30
+Author: Manuel Reif <manuel.reif@gmail.com>
 Maintainer: Manuel Reif <manuel.reif@gmail.com>
-Description: The PP package includes estimation of (MLE and WLE) person parameters for the 3-PL model (three parameter logistic model) and the GPCM (generalized partial credit model). The parameters are estimated under the assumption that the other parameters are known and fixed. The PP package also provides two functions to estimate person parameters for the 1-PL (Rasch Model). The package could be useful when items from an itempool/itembank with known item parameters are administered to a new population of testtakers and an ability estimation for every testtaker is needed.
-License: GPL
+Description: The PP package includes estimation of (MLE, WLE, MAP, EAP, ROBUST)
+    person parameters for the 1,2,3,4-PL model and the GPCM (generalized
+    partial credit model). The parameters are estimated under the assumption
+    that the item parameters are known and fixed. The package could be useful
+    when items from an itempool/itembank with known item parameters are
+    administered to a new population of testtakers and an ability estimation
+    for every testtaker is needed.
+URL: https://github.com/manuelreif/PP
+License: GPL-3
 LazyLoad: yes
-Depends: R (>= 2.15.0), splines
-Suggests: testthat
-Packaged: 2013-12-29 15:41:26 UTC; manuel
-NeedsCompilation: no
+LazyData: true
+Depends: R (>= 3.0)
+Suggests: testthat, roxygen2
+Imports: Rcpp (>= 0.11.2)
+LinkingTo: Rcpp
+Packaged: 2014-08-30 14:03:08 UTC; manuel
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-12-29 17:45:53
+Date/Publication: 2014-08-30 16:14:15
